--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -15,7 +15,7 @@
     margin-top: @component-padding - 1px;
     background: @tab-background-color;
     border-top: 1px solid transparent;
-    margin-right: 1px
+    margin-right: 1px;
     border-top-right-radius: @component-border-radius;
     border-top-left-radius: @component-border-radius;
 
