--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -40,11 +40,15 @@ status-bar {
   background-color: #fff;
 }
 
-.background-tips li {
+
+background-tips ul li {
   .text(subtle);
-  text-shadow: 0 2px @base-background-color;
-  font-size: 0.5em;
+  font-size: 24px;
+  .keystroke {
+    padding: 8px 6px 6px 6px;
+  }
 }
+
 
 .scrollbars-visible-always {
   /deep/ ::-webkit-scrollbar {
