--- a/stylesheets/ui-variables.less
+++ b/stylesheets/ui-variables.less
@@ -94,7 +94,7 @@
 
 // Custom
 
-@tooltip-background-color: @background-color-info;
+@tooltip-background-color: mix(@base-background-color, @background-color-info, 56%); //@background-color-info;
 @gutter-background-color: @background-shade-two;
 @gutter-background-color-selection: @foreground-shade-four;
 @tab-bar-height: @tab-height + @component-padding;
