removed cursor line

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -77,7 +77,7 @@ atom-text-editor::shadow,
       }
 
       &.cursor-line-no-selection {
-        background-color: @base-background-color;
+        background-color: transparent;
         color: @text-color-highlight;
       }
 
