--- a/index.less
+++ b/index.less
@@ -5,6 +5,7 @@
 @import "styles/atom";
 @import "styles/buttons";
 @import "styles/editor";
+@import "styles/git";
 @import "styles/lists";
 @import "styles/overlays";
 @import "styles/packages";
