--- a/styles/packages.less
+++ b/styles/packages.less
@@ -26,3 +26,7 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
 .is--pointer .ColorPicker-value:after {
   color: @text-color;
 }
+
+.git-control {
+  background: @base-background-color;
+}
