Panel bottom border-top correction

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -10,10 +10,14 @@ atom-panel {
     margin-top: @tab-bar-height;
     border-top: 1px solid @base-border-color;
   }
-  
+
   &.bottom {
     border-top: 1px solid @base-border-color;
   }
+}
+
+atom-panel-container {
+  border: 0;
 }
 
 .focusable-panel {
