--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -76,7 +76,7 @@
       border-radius: 2px;
       display: none;
 
-      &:before {
+      &::before {
         content:'✕';
         position:absolute;
         top: 2px;
