Git-control box-shadow

--- a/styles/packages.less
+++ b/styles/packages.less
@@ -43,6 +43,7 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
 
   .dialog {
     background: @overlay-background-color;
+    .box-shadow(@ui-shadow-color);
   }
 
   .icon.x:before, .icon.file-deleted:before {
