--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -72,3 +72,8 @@
     //background-color: lighten(@selected-color, 2%);
   }
 }
+
+// BOX SHADOW ------------------------------------------------------------------
+.box-shadow(@color) {
+  box-shadow: 0 2px 12px 1px @color;
+}
