Button status tweaking

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -17,6 +17,9 @@
   &.btn-error {
     .button-variant(@background-color-error);
   }
+  &.status-indicator {
+    border-width: 0 !important;
+  }
 }
 
 .btn:active,
