--- a/index.less
+++ b/index.less
@@ -12,4 +12,5 @@
 @import "styles/panels";
 @import "styles/settings";
 @import "styles/tabs";
+@import "styles/tooltips";
 @import "styles/tree-view";
