--- a/styles/lists.less
+++ b/styles/lists.less
@@ -24,7 +24,7 @@
 .select-list.popover-list {
   background: @overlay-background-color;
   padding: @component-padding/2 0 @component-padding/2 0;
-  box-shadow: 0 2px 12px 1px @ui-shadow-color;
+  .overlay-shadow(@ui-shadow-color);
   border-radius: @component-border-radius;
   atom-text-editor[mini] {
     margin-bottom: @component-padding;
