--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -105,7 +105,7 @@ atom-panel.modal {
     border: 1px solid @overlay-border-color;
     border-top: 0;
     border-radius: 0 0 @component-border-radius @component-border-radius;
-    box-shadow: 0 2px 12px 1px @ui-shadow-color;
+    .overlay-shadow(@ui-shadow-color);
   }
 
   &::after {
