--- a/styles/settings.less
+++ b/styles/settings.less
@@ -31,7 +31,7 @@
     &:hover {
       background: @background-color-highlight;
       color: @text-color-highlight;
-      box-shadow:0 0.5px 0 0 @ui-shadow-color;
+      .input-shadow(@color);
     }
   }
 }
