--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -17,7 +17,7 @@
     .text(info);
     white-space: nowrap;
     max-width: none;
-    .box-shadow(@ui-shadow-color);
+    .overlay-shadow(@ui-shadow-color);
   }
 
   &.top .tooltip-arrow {
