--- a/styles/settings.less
+++ b/styles/settings.less
@@ -31,7 +31,7 @@
     &:hover {
       background: @background-color-highlight;
       color: @text-color-highlight;
-      .input-shadow(@color);
+      .input-shadow(@ui-shadow-color);
     }
   }
 }
