--- a/styles/editor.less
+++ b/styles/editor.less
@@ -5,6 +5,7 @@ atom-text-editor[mini] {
   padding: 0 @component-padding 0 @component-padding;
   line-height: @component-line-height;
   font-size: @font-size;
+  .input-shadow(@ui-shadow-color);
 }
 
 atom-text-editor,
