--- a/index.less
+++ b/index.less
@@ -12,5 +12,6 @@
 @import "styles/panels";
 @import "styles/settings";
 @import "styles/tabs";
+@import "styles/text";
 @import "styles/tooltips";
 @import "styles/tree-view";
