text highlight fix

--- a/styles/text.less
+++ b/styles/text.less
@@ -27,9 +27,9 @@ pre {
 }
 
 code {
-  .text(highlight);
-  background: @background-color-highlight;
-  border-radius: @component-border-radius;
+  .text(info);
+  background: @base-accent-color;
+  border-radius: @component-border-radius/2;
 }
 
 .selected { .text(highlight); }
@@ -53,7 +53,7 @@ code {
   &:hover { color: @text-color-success; }
 }
 
-/*
+
 .highlight {
   color: @text-color-highlight;
   font-weight: bold;
@@ -63,21 +63,21 @@ code {
   padding: 1px 3px;
 }
 
-.highlight-color(@name, @color, @text-color) {
+.highlight-color(@name, @bg-color, @color) {
   .highlight-@{name} {
-    color: lighten(saturate(@text-color, 0%), 30%);
+    color: @color;
     font-weight: bold;
     text-shadow: none;
-    background-color: fadeout(@color, 60%);
-    border-radius: @component-border-radius;
-    padding: 1px 3px;
+    background-color: mix(@base-background-color, @bg-color, 56%);
+    border-radius: @component-border-radius/2;
+    padding: 1px 2px;
   }
 }
 .highlight-color(info, @background-color-info, @text-color-info);
 .highlight-color(warning, @background-color-warning, @text-color-warning);
 .highlight-color(error, @background-color-error, @text-color-error);
 .highlight-color(success, @background-color-success, @text-color-success);
-
+/*
 .results-view .path-details.list-item {
   color: darken(@text-color-highlight, 18%);
 }
