--- a/styles/packages.less
+++ b/styles/packages.less
@@ -38,7 +38,7 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
   }
 
   .logger pre {
-    border-color: @base-border-color !important;
+    border: 0;
   }
 
   .dialog {
