--- a/styles/text.less
+++ b/styles/text.less
@@ -55,7 +55,7 @@ code {
 
 
 .highlight {
-  .text(highlight)
+  .text(highlight);
   text-shadow: none;
   background-color: @background-color-highlight;
   border-radius: @component-border-radius/2;
