--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -14,7 +14,7 @@ atom-panel.modal {
   }
   .select-list ol.list-group,
   &.select-list ol.list-group {
-    background-color: @app-background-color;
+    background-color: @ui-background-color;
     border-radius: @component-border-radius;
     position: relative;
     z-index: 0;
