--- a/styles/packages.less
+++ b/styles/packages.less
@@ -31,14 +31,8 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
 
 // git-control
 .git-control {
-  background: @base-background-color;
-
   .sidebar {
     background: @gutter-background-color;
-  }
-
-  .logger pre {
-    border: 0;
   }
 
   .dialog {
@@ -51,9 +45,9 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
   }
 }
 
+/*
 //depracation-cop
 .deprecation-cop {
-  background: @base-background-color !important;
 
   .list-item {
     .text(normal);
@@ -78,3 +72,4 @@ atom-text-editor atom-text-editor-minimap::shadow .minimap-visible-area {
     }
   }
 }
+*/
