--- a/styles/panels.less
+++ b/styles/panels.less
@@ -2,7 +2,7 @@ atom-panel {
   .text(normal);
 
   &.top, &.bottom, &.left, &.right {
-    background: @app-background-color !important;
+    background: @ui-background-color !important;
   }
 
   &.right {
@@ -22,5 +22,5 @@ atom-panel-container {
 
 .focusable-panel {
   padding: @component-padding;
-  background: @app-background-color;
+  background: @ui-background-color;
 }
