--- a/styles/settings.less
+++ b/styles/settings.less
@@ -22,7 +22,7 @@
   }
 
   atom-text-editor {
-    background-color: @app-background-color !important;
+    background-color: @ui-background-color !important;
     color: @text-color !important;
   }
   .form-control {
