--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -87,7 +87,7 @@
 
       &:hover {
         color: @text-color-highlight;
-        background-color: @app-background-color;
+        background-color: @ui-background-color;
       }
     }
   }
