--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -37,9 +37,9 @@
 @gutter-background-color:          @bg-shade-two;
 @gutter-background-color-selected: @bg-shade-two;
 
-@wrap-guide-color:   @ui-background-color
-@indent-guide-color: @ui-background-color
-@invisibles-color:   @ui-background-color
+@wrap-guide-color:   @ui-background-color;
+@indent-guide-color: @ui-background-color;
+@invisibles-color:   @ui-background-color;
 
 // Var + State Background Colors -----------------------------------------------
 @background-color-info:    @git-color-info;
