--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -3,7 +3,7 @@
 // Base colors -----------------------------------------------------------------
 @base-background-color: @bg-shade-one;
 @base-border-color:     @bg-shade-four;
-@base-accent-color:     mix(@bg-shade-one, @git-color-info, 56%);
+@base-accent-color:     mix(@bg-shade-one, @color-info, 56%);
 
 // Text Colors -----------------------------------------------------------------
 @text-color:           @fg-shade-one;
@@ -42,7 +42,7 @@
 @invisibles-color:   @ui-background-color;
 
 // Var + State Background Colors -----------------------------------------------
-@background-color-info:    @git-color-info;
+@background-color-info:    @color-info;
 @background-color-success: @git-color-success;
 @background-color-warning: @git-color-warning;
 @background-color-error:   @git-color-error;
