--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -43,9 +43,9 @@
 
 // Var + State Background Colors -----------------------------------------------
 @background-color-info:    @color-info;
-@background-color-success: @git-color-success;
-@background-color-warning: @git-color-warning;
-@background-color-error:   @git-color-error;
+@background-color-success: @color-success;
+@background-color-warning: @color-warning;
+@background-color-error:   @color-error;
 
 @background-color-highlight: @bg-shade-five;
 @background-color-selected:  @bg-shade-one;
