--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -24,7 +24,7 @@
 @text-color-removed:  @text-color-error;
 
 // Atom colors -----------------------------------------------------------------
-@ui-background-color: @bg-shade-one;
+@ui-background-color: @bg-shade-three;
 @ui-shadow-color:     rgba(0, 0, 0, 0.3);
 
 @app-background-color: @bg-shade-one;
