--- a/styles/atom.less
+++ b/styles/atom.less
@@ -3,7 +3,7 @@
 }
 
 atom-workspace {
-  background: @ui-background-color;
+  background: @app-background-color;
   font-family: @font-family;
 
   .item-views {
