--- a/styles/panels.less
+++ b/styles/panels.less
@@ -24,3 +24,8 @@ atom-panel-container {
   padding: @component-padding;
   background: @ui-background-color;
 }
+
+.item-views .focusable-panel {
+  padding: @component-padding;
+  background: @app-background-color;
+}
