--- a/styles/settings.less
+++ b/styles/settings.less
@@ -21,6 +21,10 @@
     background-color: @gutter-background-color !important;
   }
 
+  .package-update-view .thumbnail {
+    background-color: @gutter-background-color !important;
+  }
+
   atom-text-editor {
     background-color: @ui-background-color !important;
     color: @text-color !important;
