--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -41,7 +41,7 @@ fieldset[disabled] .btn.active {
 
 }
 
-// Buttons in the 'Find and Replace' panel
+// Buttons and input in the 'Find and Replace' panel
 .find-and-replace .find-container .btn-group-find,
 .find-and-replace .replace-container .btn-group-replace {
   margin-left: 0;
