--- a/styles/lists.less
+++ b/styles/lists.less
@@ -46,4 +46,13 @@
       color: @text-color-highlight;
     }
   }
+  -webkit-animation: show 200ms;
+  @-webkit-keyframes show {
+    0% {opacity: 0.0;}
+    100% {opacity: 1.0;}
+  }
+}
+
+.character-match {
+  font-weight: normal !important;
 }
