--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -4,7 +4,6 @@
 @base-background-color: @bg-shade-one;
 @base-border-color:     @bg-shade-four;
 @base-accent-color:     mix(@bg-shade-one, @color-info, 56%);
-
 // Text Colors -----------------------------------------------------------------
 @text-color:           @fg-shade-one;
 @text-color-subtle:    @fg-shade-two;
@@ -96,10 +95,10 @@
 @input-selection-color:            @background-color-highlight;
 @input-selection-color-focus:      @background-color-highlight;
 
-@tooltip-background-color:         @base-accent-color;
-@tooltip-text-color:               @text-color-info;
-@tooltip-text-key-color:           @tooltip-background-color;
-@tooltip-background-key-color:     @tooltip-text-color;
+@tooltip-background-color:         @ui-selection;
+@tooltip-text-color:               @text-color-highlight;
+@tooltip-text-key-color:           @text-color-info;
+@tooltip-background-key-color:     @base-accent-color;
 
 @progress-background-color:        @base-accent-color;
 
