--- a/styles/atom.less
+++ b/styles/atom.less
@@ -26,12 +26,14 @@ atom-notifications {
 }
 
 .key-binding {
-  background: @base-accent-color;
   .text(info);
+  color: @tooltip-text-key-color;
+  background: @tooltip-background-key-color;
   display: inline-block;
   height: @component-line-height*0.8;
   line-height: @component-line-height*0.8;
   border-radius: @component-border-radius/2;
   font-size: @font-size*0.8;
   padding: 0 @component-padding / 2;
+  margin-left: 2px;
 }
